# Noctyra

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  main.py  make.bat  original.py  out.py  pyproject.toml  transformed.py
.github/workflows/: ci.yml  publish.yml
classes/: Context.py  Function.py  __init__.py  context.py  variable.py
noctyra/: __init__.py  __main__.py
noctyra/core/: Context.py  Function.py  Pipeline.py  Symbolic.py  Transformer.py  Variable.py  __init__.py
noctyra/transformers/: Attributes.py  CompareSimplifier.py  Constants.py  DeadCodeEleminator.py  ForLoops.py  Functions.py  Generic.py  Inliner.py  LambdaLP.py  ListComp.py  NameReplacer.py  __init__.py  safe_eval.py
noctyra/utils/: Shared.py  __init__.py
tests/: test_transformers.py
transformers/: Attributes.py  BaseTransformer.py  CompareSimplifier.py  Constants.py  DeadCodeEleminator.py  Functions.py  ListComp.py  NameReplacer.py  Pipeline.py  __init__.py  attributes.py  condsimplifier.py  constants.py  functions.py  listcomp.py  pipeline.py  safe_eval.py
utils/: logger.py  shared.py
