[project]
name = "noctyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "blosc>=1.11.4",
    "brotli>=1.2.0",
    "rich>=14.3.3",
    "xdis>=6.1.8",
    "zstd>=1.5.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
