[project]
name = "noctyra"
version = "0.1.3"
description = "A generic static Python deobfuscator based on AST transformations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "0p4n1k", email = "0p4n1k@mailfence.com" }
]
keywords = ["deobfuscator", "ast", "python", "static-analysis", "reverse-engineering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "black>=26.3.1",
  "blosc>=1.11.4",
  "brotli>=1.2.0",
  "rich>=14.3.3",
  "zstd>=1.5.7.3",
]

[project.urls]
Homepage = "https://github.com/0p4n1k/Noctyra"
Repository = "https://github.com/0p4n1k/Noctyra"
Issues = "https://github.com/0p4n1k/Noctyra/issues"

[project.scripts]
noctyra = "noctyra.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noctyra", "transformers", "utils", "classes"]

[dependency-groups]
dev = [
  "hatchling>=1.29.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.15.8",
  "twine>=6.2.0",
]
